# Digital-Health

./: .gitignore  generate_icon.js  generate_valid_icons.js  index.html  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
src/: App.jsx
src-tauri/: .taurignore  Cargo.toml  dashboard.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  icons.rs  main.rs  monitor.rs
src/components/common/: IconButton.jsx  TabItem.jsx
src/components/layout/: Header.jsx
src/components/sections/: DashboardHome.jsx
src/components/widgets/: AiChatWidget.jsx  MetricCard.jsx
src/constants/: dashboardData.js
src/services/: tauriApi.js
